@@ -28,7 +28,6 @@ exportMethods(summary)
 export(abbreviateTimeLabels,
        approx3d,
        argShow,
-       argoDataNames,
        beamName,
        bound125,
        addColumn,
@@ -83,6 +82,7 @@ export(abbreviateTimeLabels,
        curl,
        dataLabel,
        decimate,
+       decodeDataNamesArgo,
        decodeDataNames,
        decodeHeaderNortek,
        decodeTime,
